# WireWorld-Cell-DEVS

./: CMakeLists.txt  Cell-DEVS-WireWorld-Report.docx  DEVSmodelsForm.doc  README.md  build_sim.sh
config/: clock_generator_config.json  diode_blocked_config.json  diode_config.json  or_gate_config.json  signal_splitter_config.json
include/: wireworld_cell.hpp
logs/: clock_generator_config_log.csv  diode_blocked_config_log.csv  diode_config_log.csv  or_gate_config_log.csv  signal_splitter_config_log.csv
src/: main.cpp
videos/: clock_generator.webm  diode.webm  diode_blocked.webm  or_gate.webm  signal_splitter.webm
